# edgeai-hw6

./: .gitignore  Dockerfile.ci  README.md  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
calibration/: accuracy_baseline.json  calibrate_int8.py
deploy/: deploy.sh  docker-compose.yml  healthcheck.sh  power_profile.json  rollback.sh
evidence/: tmp.txt
src/: __init__.py  healthcheck.py  inference_node.py  mqtt_publisher.py  unused_module.py
tests/: test_accuracy.py  test_healthcheck.py  test_inference.py  test_mqtt.py  test_smoke.py
tests/integration/: test_jetson_e2e.py
