# =========================================================================
# HW6 Coding-Compliance Policy — READ BEFORE MODIFYING
# =========================================================================
[project]
name = "edgeai-hw6"
version = "0.1.0"
description = "HW6: Optimized Edge-AI Service with CI/CD"
requires-python = "==3.10.*"
dependencies = [
    "paho-mqtt>=2.0",
    "numpy>=1.26,<2",
]

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.11",
    "opencv-python==4.10.0.84",
]
quality = [
    "ruff>=0.6",
    "mypy>=1.8",
    "bandit>=1.7",
    "pylint>=3.0",
]

[tool.pdm.scripts]
test = {shell = "echo; echo '━━━ pytest [test] ━━━'; pytest"}
lint = {shell = "echo; echo '━━━ ruff check [lint] ━━━'; ruff check ."}
format = {shell = "echo; echo '━━━ ruff format [format] ━━━'; ruff format ."}

[tool.pdm.scripts.test-cov]
shell = """
echo; echo '━━━ pytest + coverage [test-cov] ━━━'; \
pytest --ignore=tests/integration --cov=src --cov-report=term-missing \
  --cov-report=html --cov-fail-under=90\
"""

[tool.pdm.scripts.lint-fix]
shell = """
echo; echo '━━━ ruff check --fix [lint-fix] ━━━'; \
ruff check --fix .\
"""

[tool.pdm.scripts.format-check]
shell = """
echo; echo '━━━ ruff format --check [format-check] ━━━'; \
ruff format --check .\
"""

[tool.pdm.scripts.typecheck]
shell = """
echo; echo '━━━ mypy [typecheck] ━━━'; \
mypy src/inference_node.py src/healthcheck.py src/mqtt_publisher.py \
  calibration/calibrate_int8.py\
"""

[tool.pdm.scripts.security]
shell = """
echo; echo '━━━ bandit [security] ━━━'; \
bandit -r src calibration -c pyproject.toml\
"""

[tool.pdm.scripts.pylint]
shell = """
echo; echo '━━━ pylint [pylint] ━━━'; \
pylint src/inference_node.py src/healthcheck.py src/mqtt_publisher.py \
  calibration/calibrate_int8.py --fail-under=7.0\
"""

check = {composite = [
    "format-check", "lint", "typecheck", "security", "pylint",
]}
ci = {composite = ["check", "test-cov"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.coverage.run]
source = ["src"]
omit = ["src/__init__.py", "tests/*"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", ".pdm-build", "actions-runner"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "UP",
    "SIM",
    "N",
    "RUF",
    "PLR2004",
    "ANN001", "ANN201", "ANN202", "ANN204", "ANN205", "ANN206",
    "ANN401",
    "D",
]
ignore = [
    "E722",
    "RUF001", "RUF002", "RUF003",
    "RUF005",
    "N802",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "PLR2004",
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "ANN001", "ANN201", "ANN202", "ANN204", "ANN205", "ANN206",
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = false
suppress-dummy-args = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = false
disallow_untyped_defs = false
disallow_any_explicit = true

[[tool.mypy.overrides]]
module = ["cv2", "paho.mqtt", "paho.mqtt.client", "paho.mqtt.enums",
          "ultralytics", "yaml"]
ignore_missing_imports = true

[tool.bandit]
skips = ["B101", "B108", "B104", "B404", "B603"]
exclude_dirs = ["tests", ".venv", ".mypy_cache", ".pdm-build"]

[tool.pylint.main]
ignored-modules = ["cv2", "ultralytics"]

[tool.pylint.basic]
no-docstring-rgx = "^$"

[tool.pylint.format]
max-line-length = 100

[tool.pylint."messages control"]
disable = [
    "too-few-public-methods",
    "fixme",
    "invalid-name",
    "import-outside-toplevel",
    "global-statement",
]

[tool.pylint.design]
max-args = 8
max-attributes = 10
